2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05-22 ------------------------------------------------------------------------------------------------------------
* cleaned up and reworded a few of the readme's

2025-05-22 ------------------------------------------------------------------------------------------------------------
* renamed original CHANGELOG.txt to CHANGELOG-pre_github.txt and started this new file to replace it
* cleaned up and reworded a few of the readme's